Finish rough layout

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,11 +2,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2%;
+  margin: 20px 20px 30px 20px;
 }
 
 .logo, .tile {
-  height: 50px;
+  height: 40px;
 }
 
 .tile {
