--- a/src/Components/TitleCard/TitleCard.css
+++ b/src/Components/TitleCard/TitleCard.css
@@ -1,28 +1,35 @@
 .title-card, 
 .background,
+.foreground,
 .poster {
-  height: 220px;
-  width: 391px;
+  height: 200px;
+  width: 343px;
 }
-
-
 
 .title-card {
   position: relative;
+  margin: 4px;
 }
 
 .background {
   background-color: black;
   overflow: hidden;
   position: absolute;
+  z-index: 1;
+}
+
+.foreground {
+  background-color:rgba(0, 0, 0, 0.2);
+  position: absolute;
+  z-index: 2;
 }
 
 iframe {
   bottom: 165px;
   position: relative;
-  right: 80px;
-  width: 550px;
-  height: 550px;
+  right: 90px;
+  width: 520px;
+  height: 530px;
   pointer-events: none;
   background-color: black;
 }
