--- a/src/Components/TitleCard/TitleCard.css
+++ b/src/Components/TitleCard/TitleCard.css
@@ -22,6 +22,7 @@
   background-color:rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: 2;
+  color: white;
 }
 
 iframe {
@@ -33,6 +34,22 @@ iframe {
   pointer-events: none;
   background-color: black;
 }
+
+.foreground {
+  display: grid;
+  grid-template-columns: 89% 11%;
+}
+
+.info-section {
+  padding: 20px 10px 10px 10px;
+}
+
+.favorite-btn {
+  height: 25px;
+  margin-top: 10px;
+}
+
+
 
 
 
