--- a/src/Components/TitleCard/TitleCard.css
+++ b/src/Components/TitleCard/TitleCard.css
@@ -19,10 +19,18 @@
 }
 
 .foreground {
-  background-color:rgba(0, 0, 0, 0.2);
+  background-color:rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 2;
   color: white;
+  display: grid;
+  grid-template-columns: 89% 11%;
+  opacity: 1;
+}
+
+.foreground:hover {
+  opacity: 0;
+  transition: 5s;
 }
 
 iframe {
@@ -35,13 +43,22 @@ iframe {
   background-color: black;
 }
 
-.foreground {
-  display: grid;
-  grid-template-columns: 89% 11%;
-}
 
 .info-section {
-  padding: 20px 10px 10px 10px;
+  display: flex;
+  align-items: flex-end;
+  padding: 0 10px 0 10px;
+}
+
+.rating {
+  font-weight: bold;
+  color: rgb(18, 192, 18);
+}
+
+.mpaa {
+  border: 1px solid white;
+  padding: 2px 4px 2px 4px;
+  margin: 0 8px 0 8px;
 }
 
 .favorite-btn {
