--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -30,16 +30,17 @@ header {
 }
 
 .search-field {
+	font-size: 1rem;
+	color: white;
 	background-color: transparent;
-	background-image: url(http://hasselpalm.com/wp-content/themes/twentythirteen/images/search-icon.png);
-	background-position: 5px center;
+	background-position: 9px center;
 	background-repeat: no-repeat;
-	background-size: 24px 24px;
+	background-size: 22px;
 	border: none;
 	cursor: pointer;
-	height: 37px;
+	height: 38px;
 	margin: 3px 0;
-	padding: 0 0 0 34px;
+	padding: 0 10px 0 40px;
 	position: relative;
 	-webkit-transition: width 400ms ease, background 400ms ease;
 	transition:         width 400ms ease, background 400ms ease;
@@ -48,10 +49,14 @@ header {
 
 .search-field:focus {
 	background-color: black;
-	border: 2px solid red;
+	border: 1px solid white;
 	cursor: text;
 	outline: 0;
-	width: 230px;
+	width: 250px;
+}
+
+::placeholder {
+	color: white;
 }
 
 .search-submit {
@@ -59,5 +64,5 @@ header {
 }
 
 input[type="search"] {
-  -webkit-appearance: textfield;
+	-webkit-appearance: textfield;
 }
