--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,23 @@
 body {
   background-color: black; 
 }
+
+.main-view {
+  position: relative;
+  z-index: 99;
+}
+
+.blur {
+  filter: blur(5px) brightness(.5);
+  transition: 2s;
+}
+
+.login-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+}
