--- a/src/Components/TitleContainer/TitleContainer.css
+++ b/src/Components/TitleContainer/TitleContainer.css
@@ -1,3 +1,12 @@
+.title {
+  color: white;
+}
+
+.container-name {
+  margin-left: 25px;
+  display: flex;
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
