--- a/src/Components/TitleContainer/TitleContainer.css
+++ b/src/Components/TitleContainer/TitleContainer.css
@@ -2,6 +2,11 @@
   color: white;
 }
 
+.favorites-page {
+  display: flex;
+  justify-content: space-between;
+}
+
 .container-name {
   margin-left: 25px;
   display: flex;
@@ -11,4 +16,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.card-container-favorites {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
