--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,16 +1,23 @@
 header {
+	position: absolute;
+	width: 100%;
+	height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 25px 0 25px;
+	z-index: 999;
 }
 
 .logo, .tile {
-  height: 40px;
+	height: 40px;
+}
+
+.logo {
+	margin-left: 40px;
 }
 
 .tile {
-  margin-left: 20px;
+  margin: 0 40px 0 20px;
 }
 
 .controls-container {
@@ -21,12 +28,6 @@ header {
 .login-button {
 	background-color: black;
 	border: none;
-}
-
-.search-form {
-	/* position: absolute;
-	right: 20px;
-	top: 1px; */
 }
 
 .search-field {
