--- a/src/Components/Feature/Feature.css
+++ b/src/Components/Feature/Feature.css
@@ -1,11 +1,15 @@
 .feature-card {
   position: relative;
-  margin-bottom: -100px;
+  margin-bottom: -6%;
 }
 
 .feature-foreground {
+  opacity: 0;
   position: absolute;
   z-index: 996;
+  width: 100%;
+  height: 90%;
+  padding: 0 0 0 40px;
 }
 
 .super-iframe-holder {
@@ -21,11 +25,56 @@
 .super-iframe-holder iframe {
   position: absolute;
   top: -20%;
-  left: -35%;
+  left: -37%;
   width: 175%;
   height: 140%;
   padding: 0;
   margin: 0;
   bottom: 0;
   outline: 0;
+}
+
+.feature-title-page-link {
+  width: 50%;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+  
+}
+
+.feature-movie-title {
+  margin-top: 35%;
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+}
+
+.feature-rating,
+.feature-mpaa,
+.feature-movie-tagline {
+  font-size: 1.2rem;
+  width: 50%;
+}
+
+
+.feature-card:hover .feature-foreground {
+  opacity: 1;
+  transition: 4s;
+}
+
+.feature-rating {
+  font-weight: bold;
+  color: rgb(18, 192, 18);
+}
+
+.feature-mpaa {
+  border: 1px solid white;
+  padding: 2px 4px 2px 4px;
+  margin: 0 8px 0 8px;
+}
+
+.feature-favorite-btn {
+  cursor: pointer;
+  opacity: 1;
+  height: 25px;
+  margin-top: 10px;
 }
