--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -60,11 +60,16 @@
   text-decoration: underline;
   cursor: pointer;
   display: inline-flex;
-  align-content: flex-start;
+  text-align: center;
   z-index: 100;
-  margin-top: 100px; 
+  margin-top: 50px; 
   text-align: center;
   margin-left: 30px;
   text-decoration: none;
-  font-size: .85em;
+  font-size: 1em;
+}
+
+.error {
+  color: #E50913;
+  text-align: center;
 }
