--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,9 +1,19 @@
 .login {
+  position: relative;
   background-color: rgba(0, 0, 0, .75);
   height: 400px;
   width: 325px;
   border-radius: 10px;
   padding: 35px;
+  padding-top: 50px;
+}
+
+.exit {
+  cursor: pointer;
+  position: absolute;
+  height: 25px;
+  left: 355px;
+  top: 15px;
 }
 
 .signin-header {
