--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,14 @@
 header {
-	position: absolute;
 	width: 100%;
 	height: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 	z-index: 999;
+}
+
+.position {
+	position: absolute; 
 }
 
 .logo, .tile {
